# rust-oci-wasm

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md
.github/workflows/: build_and_test.yaml  ci.yaml  release.yaml
src/: client.rs  component.rs  config.rs  lib.rs
tests/: integration_tests.rs
tests/data/: component.wasm
