[package]
name = "rust-oci-wasm"
version = "0.1.0"
edition = "2021"
authors = ["Taylor Thomas <taylor@oftaylor.com>"]
description = "A crate containing a thin wrapper around the oci-distribution crate that implements types and methods for pulling and pushing Wasm to OCI registries"
license-file = "LICENSE"
keywords = ["wasm", "oci", "webassembly"]

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
oci-distribution = "0.11"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tokio = { version = "1", default-features = false, features = ["fs"] }
wit-component = "0.207.0"
wit-parser = "0.207"
