[package]
name = "oci-wasm"
version = "0.2.0"
edition = "2021"
authors = ["Taylor Thomas <taylor@oftaylor.com>"]
description = "A crate containing a thin wrapper around the oci-client crate that implements types and methods for pulling and pushing Wasm to OCI registries"
repository = "https://github.com/bytecodealliance/rust-oci-wasm"
license = "Apache-2.0 WITH LLVM-exception"
license-file = "LICENSE"
keywords = ["wasm", "oci", "webassembly"]

[badges]
maintenance = { status = "actively-developed" }

[features]
default = ["oci-client/native-tls"]
rustls-tls = ["oci-client/rustls-tls"]

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
oci-client = { version = "0.14", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tokio = { version = "1", default-features = false, features = ["fs"] }
wit-component = "0.219"
wit-parser = "0.219"
